<resources>
    <string name="app_name">SminqTaskDemo</string>
    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="no_tasks">No Tasks</string>
    <string name="add_new_task">Add new Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>
